fix: require field report for work order completion
Regra de produto confirmada: relato em campo e' requisito BASE de
qualquer OS operacional, junto de check-in/check-out - sempre
obrigatorio, independente de Category, requireFieldReport, config
global, checklist, foto, assinatura ou quilometragem.

WorkOrderCompletionValidator antes so exigia FIELD_REPORT quando
workOrder.isRequireFieldReport() (snapshot da Category) era true.
Passa a exigir sempre, incondicionalmente - o campo/snapshot
requireFieldReport continua existindo (Category, WorkOrder, DTOs),
sem alteracao de schema/migration, mas deixa de controlar essa
obrigatoriedade; vira compatibilidade/informativo.

PHOTO continua totalmente independente do relato:
requirePhotos OR completeFiles==REQUIRED, sem nenhuma dependencia
cruzada nos dois sentidos (foto obrigatoria nao implica relato
obrigatorio nem o contrario - relato ja e' sempre obrigatorio de
qualquer forma).

findFieldReportComments(workOrder.getId()) continua sendo chamado
uma unica vez por validacao, reutilizado tanto por
hasFieldReportText quanto por hasFieldEvidencePhoto.

Auditoria de compatibilidade: requireFieldReport so e' usado como
armazenamento (WorkOrderCategory, WorkOrder snapshot,
WorkOrderService.applyCategoryCompletionRequirementsSnapshot) e
exposicao/edicao em DTOs (WorkOrderCategoryMiniDTO,
WorkOrderCategoryPatchDTO, WorkOrderShowDTO) - nenhum Controller ou
o WorkOrderOperationalReportService interpretam o campo como "relato
opcional". Nenhuma contradicao P0/P1 encontrada.

Import historico e transicao COMPLETE (revalida so em transicao
genuina) permanecem inalterados.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>